# persistence-os

./: .gitignore  CHANGELOG-txn.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  WORKER-SUMMARY.md  pyproject.toml  pytest.ini  voice.md
bench/: __init__.py
bench/regulator_replay/: LICENSE  MANIFEST.json  README.md  __init__.py  generator.py  harness.py
docs/: agent1-fact-spec.md  agent2-plan-spec.md  agent3-effect-spec.md  agent4-replay-spec.md  memory-palace-integration.md  phase-1-milestone-for-vault.md
docs/adr/: 2026-04-22-audit-ctx-provider.md
docs/aris-bitemporal-design-round-1/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md
docs/aris-bitemporal-design-round-2/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md
docs/aris-round-1/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md
docs/aris-round-2/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md  W-paper-summary.md
docs/aris-round-3/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md  W-polish-summary.md
docs/aris-round-4/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md  W-wire-summary.md
docs/aris-round-5/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md  W-polish2-summary.md
docs/aris-round-6/: R0-consolidation.md  R1-correctness.md  R2-rigor.md  R3-composability.md  R4-research.md
docs/operations/: postgres-deployment.md
docs/plans/: 2026-04-22-memory-palace-bitemporal-design.md  2026-04-23-persistence-plan-v0.1-design.md  2026-04-23-persistence-plan-v0.1-impl.md  2026-04-24-r3-m4-coercion-registry-design.md  2026-04-25-v0.4-substrate-primitives-impl.md  2026-04-25-v0.4-substrate-primitives.md  2026-04-25-write-time-synthesis-design.md  2026-04-26-paper-latex-conversion-design.md  2026-04-26-paper-latex-conversion-impl.md  2026-04-26-paper-v0.7-substrate-refresh-design.md  2026-04-26-paper-v0.7-substrate-refresh-impl.md  2026-04-27-persistence-os-v1.0-roadmap.md  2026-04-27-v0.5-txn-design.md  2026-04-27-v0.5-txn-impl.md  2026-04-27-v0.5.1-rev-o-narrowings-design.md  2026-04-27-v0.5.1-rev-o-narrowings-impl.md  2026-04-28-v0.6.0a1-plan-execution-design.md  2026-04-28-v0.6.0a1-plan-execution-impl.md  2026-04-28-v0.6.5-mcts-design.md  2026-04-28-v0.6.5-mcts-impl.md  2026-04-28-v0.7.0a1-module-7-repl-design.md  2026-04-29-adapter-sdk-contract-design.md  2026-04-29-v0.5.2-clojure-parity-design.md  2026-04-30-phase-2-persistence-coder-design.md  2026-04-30-phase-2.0a-plan-edit-impl.md  2026-04-30-v0.8.0-postgres-store-design.md  2026-05-01-phase-2.0c-ext-fork-primitive-impl.md  2026-05-01-phase-2.0c-fold-sdk-surface-impl.md  2026-05-02-phase-2-coder-mvp-refresh.md  2026-05-02-phase-2.0e-2.0f-substrate-prereqs-impl.md  2026-05-03-phase-2.1a-coder-skeleton-design.md  2026-05-03-phase-2.1a-coder-skeleton-impl.md  2026-05-04-phase-2.1b-llm-provider-design.md  2026-05-04-phase-2.1b-llm-provider-impl.md  2026-05-04-phase-2.1c-context-substrate-design.md  2026-05-04-phase-2.1c-context-substrate-impl.md  2026-05-04-phase-2.1c.5-caller-identity-design.md  2026-05-04-phase-2.1c.6-audit-chain-wiring-design.md  2026-05-05-phase-2.1c.6-audit-chain-wiring-impl.md  2026-05-05-phase-2.2a-observe-act-design.md  (+20 more)
docs/release-notes/: v0.9.0a1-positioning.md  v0.9.0a1.md
examples/: README.md  demo_audit_tamper.py
paper/: persistence-nesy-2026-draft.md
paper/archive/: persistence-nesy-2026-v0.7.md
paper/tex/: .gitignore  Makefile  persistence-nesy-2026.tex  references.bib
review-stage/: AUTO_REVIEW.md  REVIEW_STATE.json  anon_restore.txt  references.bib  round1_prompt.txt  round2_prompt_head.txt  round3_prompt.txt  round4_prompt.txt  round5_prompt.txt  round6_prompt.txt  round6_prompt_inlined.txt
review-stage/roadmap-aris/: r1_prompt.txt  r1_review.txt
scripts/git-hooks/: README.md  install.sh  (+1 more)
tests/: conftest.py  preflight_manifest.toml  test_curated_sdk_discipline.py  test_wall_clock_ban.py  test_wall_clock_ban_sys_now_sweep.py
(+550 files in other folders)
