[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persistence"
version = "0.1.0a1"
description = "Bitemporal, effect-typed, homoiconic cognitive runtime for accountable neurosymbolic agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Nawfal Saadi", email = "saadinawfal@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["persistence*"]

[tool.setuptools.package-data]
"persistence.fact" = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
