[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persistence"
version = "0.6.5"
description = "Bitemporal, effect-typed, homoiconic cognitive runtime for accountable neurosymbolic agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Nawfal Saadi", email = "saadinawfal@gmail.com" }
]
dependencies = [
    "edn_format>=0.7.5",
    "pyrsistent>=0.20",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
optimize = [
    "dspy-ai>=2.5.0,<3.0.0",
]
repl = [
    "aiohttp>=3.9.0,<4.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "aiohttp>=3.9.0,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["persistence*"]

[tool.setuptools.package-data]
"persistence" = ["py.typed"]
"persistence.fact" = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
