[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persistence"
version = "0.8.5a1"
description = "Bitemporal, effect-typed, homoiconic cognitive runtime for accountable neurosymbolic agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Nawfal Saadi", email = "saadinawfal@gmail.com" }
]
dependencies = [
    "edn_format>=0.7.5",
    "pyrsistent>=0.20",
    # Mimir Phase B — Ed25519 signing on the audit chain. Used by
    # persistence.effect._signing (sign/verify/generate_keypair) and the
    # optional ``signer=`` parameter on make_audit_handler. Backwards
    # compatible: chains without signers continue to work unchanged.
    "cryptography>=42.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]
optimize = [
    "dspy-ai>=2.5.0,<3.0.0",
]
repl = [
    "aiohttp>=3.9.0,<4.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "aiohttp>=3.9.0,<4.0.0",
    # PG1: dev-time Postgres backend deps so the optional-extra tests in
    # tests/store/test_postgres.py can run without a separate [postgres]
    # install. Tests that need a live database skip cleanly when none is
    # configured (see tests/store/test_postgres.py for the skip rule).
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]
http = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["persistence*"]

[tool.setuptools.package-data]
"persistence" = ["py.typed"]
"persistence.fact" = ["migrations/*.sql"]
# PG6 (Phase 1 stream #169): the Postgres backend's migrations live
# under ``persistence.store.migrations.<flavour>`` and are loaded by
# ``persistence.store._migration_runner`` from disk on
# ``PostgresStore.__init__``. Listing them here ensures the wheel
# includes the SQL files (setuptools does not pick up non-Python
# resources by default).
"persistence.store" = ["migrations/postgres/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
